--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
